--- a/style.css
+++ b/style.css
@@ -5,3 +5,28 @@
     padding: 0px;
     margin: 0px;
 }
+
+.board {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 50px);
+    gap: 5px;
+}
+
+.boardRow {
+    display: grid;
+    grid-template-columns: repeat(3, 50px);
+    grid-template-rows: 50px;
+    gap: 5px;
+}
+
+.boardSpace {
+    border: 1px solid red;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+}
+
+button {
+    text-align: center;
+}
