--- a/style.css
+++ b/style.css
@@ -25,8 +25,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-}
-
-button {
-    text-align: center;
+    justify-items: center;
+    align-items: center;
+    font-size: 20px;
 }
