--- a/style.css
+++ b/style.css
@@ -1,31 +1,62 @@
 
-
 * {
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
 }
 
-.board {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 50px);
-    gap: 5px;
+body {
+    width:fit-content;
+    margin: 50px auto;
 }
 
-.boardRow {
+.game-wrapper {
+    background-color: #ddd;
+    width: fit-content;
+    padding: 20px 100px;
+}
+
+.btns { 
+    margin-top: 20px;
+    display: grid;
+    gap: 10px;
+}
+
+button[id = new] {
+    max-width: 75px;
+    justify-self: center;
+    border: 1px solid red;
+    padding: 5px;
+}
+
+.inputs {
+    display: grid;
+    grid-template-columns: repeat(2, 150px);
+    justify-content: space-around;
+
+}
+
+input {
+    padding: 5px;
+}
+
+.player { 
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.board {
     display: grid;
     grid-template-columns: repeat(3, 50px);
-    grid-template-rows: 50px;
+    grid-template-rows: repeat(3, 50px);
     gap: 5px;
+    background-color: #000;
 }
 
 .boardSpace {
-    border: 1px solid red;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
     justify-items: center;
     align-items: center;
     font-size: 20px;
+    border: none;
 }
